# go-versions-scrap

./: README.md  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: scrap_golang_versions.yml  scrape.yml
data/: selected_versions.json  versions.json
golang_versions/: items.py  middlewares.py  pipelines.py  settings.py
golang_versions/spiders/: selected_version.py  versions.py
