[tool.poetry]
name = "golang-versions-list"
version = "0.2.0"
description = ""
authors = ["Patrick <pvilchez794@gmail.com>"]
readme = "README.md"
packages = [{include = "golang_versions"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
